--- a/app/src/main/res/layout/activity_cone_area.xml
+++ b/app/src/main/res/layout/activity_cone_area.xml
@@ -7,7 +7,7 @@
     tools:context=".ConeCalculator.ConeArea">
 
     <TextView
-        android:id="@+id/txtCACalculator"
+        android:id="@+id/txtCoACalculator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
@@ -20,85 +20,86 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtCARadius"
+        android:id="@+id/txtCoARadius"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="44dp"
         android:text="Radius"
-        app:layout_constraintStart_toStartOf="@+id/inputCARadius"
-        app:layout_constraintTop_toBottomOf="@+id/txtCACalculator" />
+        app:layout_constraintStart_toStartOf="@+id/inputCoARadius"
+        app:layout_constraintTop_toBottomOf="@+id/txtCoACalculator" />
 
     <EditText
-        android:id="@+id/inputCARadius"
+        android:id="@+id/inputCoARadius"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/txtCACalculator"
-        app:layout_constraintStart_toStartOf="@+id/txtCACalculator"
-        app:layout_constraintTop_toBottomOf="@+id/txtCACalculator"
+        app:layout_constraintEnd_toEndOf="@+id/txtCoACalculator"
+        app:layout_constraintStart_toStartOf="@+id/txtCoACalculator"
+        app:layout_constraintTop_toBottomOf="@+id/txtCoACalculator"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/txtCAHeight"
+        android:id="@+id/txtCoAHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
         android:text="Height"
-        app:layout_constraintStart_toStartOf="@+id/inputCAHeight"
-        app:layout_constraintTop_toBottomOf="@+id/inputCARadius" />
+        app:layout_constraintStart_toStartOf="@+id/inputCoAHeight"
+        app:layout_constraintTop_toBottomOf="@+id/inputCoARadius" />
 
     <EditText
-        android:id="@+id/inputCAHeight"
+        android:id="@+id/inputCoAHeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="numberDecimal"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/inputCARadius"
+        app:layout_constraintEnd_toEndOf="@+id/inputCoARadius"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/inputCARadius"
-        app:layout_constraintTop_toBottomOf="@+id/inputCARadius"
+        app:layout_constraintStart_toStartOf="@+id/inputCoARadius"
+        app:layout_constraintTop_toBottomOf="@+id/inputCoARadius"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/txtCAAnswer"
+        android:id="@+id/txtCoAAnswer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="Cone Area:"
         android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="@+id/inputCAHeight"
-        app:layout_constraintStart_toStartOf="@+id/inputCAHeight"
-        app:layout_constraintTop_toBottomOf="@+id/inputCAHeight" />
+        app:layout_constraintEnd_toEndOf="@+id/inputCoAHeight"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/inputCoAHeight"
+        app:layout_constraintTop_toBottomOf="@+id/inputCoAHeight" />
 
     <Button
-        android:id="@+id/btnCACalculate"
+        android:id="@+id/btnCoACalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:backgroundTint="#FFC107"
         android:text="Calculate"
-        app:layout_constraintEnd_toEndOf="@+id/txtCAAnswer"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/txtCAAnswer"
-        app:layout_constraintTop_toBottomOf="@+id/txtCAAnswer" />
+        app:layout_constraintEnd_toEndOf="@+id/txtCoAAnswer"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="@+id/txtCoAAnswer"
+        app:layout_constraintTop_toBottomOf="@+id/txtCoAAnswer" />
 
     <Button
-        android:id="@+id/btnCABack"
+        android:id="@+id/btnCoABack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#FF0000"
         android:text="Back"
-        app:layout_constraintEnd_toEndOf="@+id/btnCACalculate"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="@+id/btnCACalculate"
-        app:layout_constraintTop_toBottomOf="@+id/btnCACalculate" />
+        app:layout_constraintEnd_toEndOf="@+id/btnCoACalculate"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="@+id/btnCoACalculate"
+        app:layout_constraintTop_toBottomOf="@+id/btnCoACalculate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
