--- a/app/src/main/res/layout/activity_sphere_volume.xml
+++ b/app/src/main/res/layout/activity_sphere_volume.xml
@@ -6,4 +6,75 @@
     android:layout_height="match_parent"
     tools:context=".SphereCalculator.SphereVolume">
 
+    <TextView
+        android:id="@+id/txtSVCalculator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Sphere Volume Calculator"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtSVRadius"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="44dp"
+        android:text="Radius"
+        app:layout_constraintStart_toStartOf="@+id/inputSVRadius"
+        app:layout_constraintTop_toBottomOf="@+id/txtSVCalculator" />
+
+    <EditText
+        android:id="@+id/inputSVRadius"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="@+id/txtSVCalculator"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="@+id/txtSVCalculator"
+        app:layout_constraintTop_toBottomOf="@+id/txtSVCalculator"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/txtSVAnswer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Sphere Volume:"
+        android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="@+id/inputSVRadius"
+        app:layout_constraintStart_toStartOf="@+id/inputSVRadius"
+        app:layout_constraintTop_toBottomOf="@+id/inputSVRadius" />
+
+    <Button
+        android:id="@+id/btnSVCalculate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="#2196F3"
+        android:text="Calculate"
+        app:layout_constraintEnd_toEndOf="@+id/txtSVAnswer"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="@+id/txtSVAnswer"
+        app:layout_constraintTop_toBottomOf="@+id/txtSVAnswer" />
+
+    <Button
+        android:id="@+id/btnSVBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#FF0000"
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="@+id/btnSVCalculate"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="@+id/btnSVCalculate"
+        app:layout_constraintTop_toBottomOf="@+id/btnSVCalculate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
